css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Import partials from `sass_dir` (defaults to `_sass`)
@import "normalize",
        "grid",
        "fonts",
        "syntax-highlighting";

/* Variables
–––––––––––––––––––––––––––––––––––––––––––––––––– */

$base-font-family: Rockwell, 'Courier Bold', Courier, Georgia, Times, 'Times New Roman', serif;
$header-font-family: Rockwell-Bold, 'Courier Bold', Courier, Georgia, Times, 'Times New Roman', serif;
$base-font-size:   1.5rem;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.6;

$primary-font-color: #546052;
$link-font-color: darken($primary-font-color, 25%);

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

$bigger-than-mobile: 600px;

/* Base Styles
–––––––––––––––––––––––––––––––––––––––––––––––––– */

html {
  font-size: 62.5%;
  @media screen and (min-width: $bigger-than-mobile) {
    font-size: 82%;
  }
}
body {
  font-family: $base-font-family;
  color: $primary-font-color;
  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
  line-height: $base-line-height;
  font-weight: 400; }

/* Typography
–––––––––––––––––––––––––––––––––––––––––––––––––– */

h1, h2, h3, h4, h5, h6 {
  font-family: $header-font-family;
  font-weight: 300; }
h1 {
  font-size: 1.8rem;
  line-height: 1.33;
  margin-top: 1.33em;
  margin-bottom: 1.33em;
  letter-spacing: -.05rem; }
h2 {
  font-size: 1.6rem;
  line-height: 1.5;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}
p {
  margin-top: 1.6em;
  margin-bottom: 1.6em;
}

  /* Links
–––––––––––––––––––––––––––––––––––––––––––––––––– */
a {
  color: $link-font-color;

  text-decoration: underline;

  &:hover {
    color: darken($primary-font-color, 60%);
  }
}

.post-list a,
.post-title a {
  text-decoration: none;
}

.post-list a:hover {
  color: $primary-font-color;
  border-bottom: solid 3px $primary-font-color; }


/* Lists
–––––––––––––––––––––––––––––––––––––––––––––––––– */

ul {
  list-style: circle inside; }
ol {
  list-style: decimal inside; }
ol, ul {
  padding-left: 0;
  margin-top: 0; }
ul ul,
ul ol,
ol ol,
ol ul {
  margin: 1.5rem 0 1.5rem 3rem;
  font-size: 90%; }
li {
  margin-bottom: 1rem; }

/* Code
–––––––––––––––––––––––––––––––––––––––––––––––––– */

pre,
code {
    font-size: 15px;
    border: 1px solid $grey-color-light;
    border-radius: 3px;
    background-color: #eef;
}

code {
    padding: 1px 5px;
}

pre {
    padding: 8px 12px;
    overflow-x: auto;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}

/* Layout
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.posts {
  clear: both;
}

.posts-year {
  display: none;
  @media screen and (min-width: $bigger-than-mobile) {
    display: block;
  }
}

.post-list li {

  article > h2 { margin-bottom: 0 };

  @media screen and (min-width: $bigger-than-mobile) {
    margin-left: 6rem;
  }
}

/* Modules
–––––––––––––––––––––––––––––––––––––––––––––––––– */

header .site-title {
  font-weight: 900;
  text-shadow: 0px 1px 3px rgba(139,130,130,0.50);
  margin-bottom: 0;

  .site-title__link {
    color: $primary-font-color;
    text-decoration: none;
  }
}

.site-byline {
  font-weight: 400;
  font-size: 0.55em;
  color: lighten($primary-font-color, 20%);
  letter-spacing: 0;
}

.site-header {
  margin-bottom: 0;

  p {
    margin-top: 0.3em;
    margin-bottom: 0.3em;
  }
}

.page.home > header {
  margin-bottom: 1.5rem;

  p {
    margin-top: 0;
    margin-bottom: 0;
  }
}

.posts {
  min-height: 30rem;

  > article {
    margin-bottom: 0;
    padding: 2.4rem 0 2.4rem 0;
    border-bottom: 1px solid $grey-color-light;

    &:last-child {
      border-bottom: none;
    }

    > time.post-date {
      display: block;
      font-size: 70%;
      line-height: 1;
      margin-bottom: 0.2rem;
    }

    > h2 {
      margin-top: 0;
      margin-bottom: 0.4rem;
      line-height: 1.3;
    }

    > p, > blockquote {
      margin-top: 0.4rem;
      margin-bottom: 0;
    }

    > .post-tags {
      margin-top: 1.5rem;
      margin-bottom: -1.8rem;
    }
  }
}

.posts-year {
  color: rgba(94,89,89,0.64);
  // line-height: 20px;
}

.post-list {
  list-style: none;
}

.post-link {
  font-weight: 900;
  color: $primary-font-color;
}

.post figure.image img {
  width: 100%;
}

.post figure.youtube-video {
  width: 80%;

  .youtube-video-wrap {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25px;
    height: 0;

    iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }

  figcaption {
    margin-top: 0.5rem;
  }

}

.post figcaption {
  font-size: 90%;

  .caption-title {
    color: $link-font-color;
  }
}

.post blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}

.post blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

.post blockquote p {
  display: inline;
}

.quote-item blockquote {
  background: none;
  border-left: none;
  margin: 0.3rem 0 0.5rem 0;
  padding: 0.3em 0.8em;
  quotes: "\201C""\201D";

  &:before {
    color: lighten($primary-font-color, 30%);
    content: open-quote;
    font-size: 2.5em;
    line-height: 0.1em;
    margin-right: 0.15em;
    vertical-align: -0.3em;
    font-weight: 700;
  }

  &:after {
    color: lighten($primary-font-color, 30%);
    content: close-quote;
    font-size: 2.5em;
    line-height: 0.1em;
    margin-left: 0.1em;
    vertical-align: -0.3em;
    font-weight: 700;
  }

  p {
    display: inline;
  }
}

.post-meta {
  font-family: $base-font-family;
  font-size: 85%;
  font-weight: 400;
  font-style: italic;
  color: lighten($primary-font-color, 20%);
}

.post-tags {
  font-size: 70%;
  color: lighten($primary-font-color, 30%);
  margin-top: 1.2rem;
  margin-bottom: 0;
}

.post-more {
  font-size: 85%;
  margin-top: 0.3rem;
  margin-bottom: 0;
}

.footnotes {
  margin-left: 2rem;
  font-size: 80%;
  color: lighten($primary-font-color, 20%);

  a {
    color: inherit;

    &:hover {
      border-bottom: none;
    }

  }

}

footer {
  text-align: center;

  p {
    font-size: 80%;
    color: lighten($primary-font-color, 40%);
  }

}

.notebook-document header > p {
  display: none;
}

